--- a/style.css
+++ b/style.css
@@ -4,3 +4,52 @@
     font-weight: normal;
     font-style: normal;
 }
+
+body{
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top:50%; 
+    left:50%; 
+    transform:translate(-50%, -50%);
+
+    margin: 0;
+    padding: 0;
+
+    font-family: 'KOTRAHOPE';
+}
+
+
+p {
+    margin: 0.2rem;
+    padding: 0;
+}
+
+img{
+    width: 7rem;
+}
+
+#snowCanvas{
+    position: absolute;
+    z-index: 2;
+
+    width: 100%;
+    height: 100%;
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+}
+
+#signCanvas{
+    background-color: aliceblue;
+    border: 1px solid black
+}
